--- a/contact.html
+++ b/contact.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>About me page</title>
+    <title>Contact me</title>
 </head>
-<body>
+<body class="sections">
     <section>
         <div class="container">
             <div class="navbar">
@@ -24,22 +24,22 @@
             </div>
         </div>
     </section>
-    <section class="about">
-        <div class="about-detail">
-            <h2>Hi, I am Dolapo Mosuro</h2>
-            <p>I am a Web developer and I have a wide range of discounts and ready-made templates for your websites. Register or Login to gain access. To get a one on one, customized experience, send me a message and I will sure get back to you. My services are available on request.</p>
-            <div class="btn-links">
-               <a href="contact.html" class="btn">Drop a message</a>
+    <section>
+        <div class="contact-section">
+            <div class="contact-box">
+                <div class="left"></div>
+                <div class="right">
+                    <h2>Contact Me</h2>
+                    <input type="text" class="field" placeholder="FullName">
+                    <input type="email" class="field" placeholder="Email">
+                    <textarea class="field-area" placeholder="Message here"></textarea>
+                    <a href="#" class="btn">Send</a>
+
+                
+                </div>
             </div>
         </div>
-        <div class="img">
-            <img src="https://res.cloudinary.com/dlapsie/image/upload/v1654460645/20210606_175905_zqrmom.jpg" class="img-section" alt="image">
-        </div>
-        <div class="social-media">
-            <a href="">Facebook</a>
-            <a href="">Linkedin</a>
-            <a href="">Twitter</a>
-        </div>
     </section>
+   
 </body>
 </html>
