--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <title>Contact me</title>
 </head>
-<body class="sections">
+<body>
     <section>
         <div class="container">
             <div class="navbar">
@@ -30,12 +30,13 @@
                 <div class="left"></div>
                 <div class="right">
                     <h2>Contact Me</h2>
-                    <input type="text" class="field" placeholder="FullName">
-                    <input type="email" class="field" placeholder="Email">
-                    <textarea class="field-area" placeholder="Message here"></textarea>
-                    <a href="#" class="btn">Send</a>
+                    <div class="input-section">
+                        <input type="text" class="field" placeholder="FullName">
+                        <input type="email" class="field" placeholder="Email">
+                        <textarea class="field-area" placeholder="Message here"></textarea>
+                        <a href="index.html" id="btn">Send</a>
 
-                
+                    </div>
                 </div>
             </div>
         </div>
