--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <h1>Hi, I am Dolapo Mosuro</h1>
             <p>I am a Web developer and I have a wide range of discounts and ready-made templates for your websites. Register or Login to gain access. To get a one on one, customized experience, send me a message and I will sure get back to you. My services are available on request.</p>
             <div class="btn-links">
-               <a href="contact.html" class="btn">Drop a message</a>
+               <a href="contact.html" id="btn">Drop a message</a>
             </div>
         </div>
         <div class="img">
