--- a/contact.html
+++ b/contact.html
@@ -33,7 +33,7 @@
                     <div class="input-section">
                         <input type="text" class="field" placeholder="FullName">
                         <input type="email" class="field" placeholder="Email">
-                        <textarea class="field-area" placeholder="Message here"></textarea>
+                        <textarea class="field" placeholder="Message here"></textarea>
                         <a href="index.html" id="btn">Send</a>
 
                     </div>
