--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             </div>
         </div>
         <div class="img">
-            <img src="https://res.cloudinary.com/dlapsie/image/upload/v1654460645/20210606_175905_zqrmom.jpg" class="img-section" alt="image">
+            <img src="https://res.cloudinary.com/dlapsie/image/upload/v1662224464/20210606_175905_gavjzs.png" class="img-section" alt="image">
         </div>
         <div class="social-media">
             <a href="">Facebook</a>
